force-app/main/default/objects/BusinessSite__c/BusinessSite__c.object-meta.xml
<CustomObject>
    <label>Punto de Venta</label>
    <nameField>
        <label>Business Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puntos de Venta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>