force-app/main/default/objects/BusinessSite__c/fields/AssociatedWarehouseId__c.field-meta.xml
<CustomField>
    <fullName>AssociatedWarehouseId__c</fullName>
    <label>Associated Warehouse</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>