force-app/main/default/objects/BusinessSite__c/fields/PointOfSaleId__c.field-meta.xml
<CustomField>
    <fullName>PointOfSaleId__c</fullName>
    <label>PointOfSaleId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>