force-app/main/default/objects/BusinessSite__c/fields/Werks__c.field-meta.xml
<CustomField>
    <fullName>Werks__c</fullName>
    <label>Werks</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>